data/derived/comb/progs/unify/prog7294.ml.out
Characters 45-46:
  let f a x = let rec a c y = a a x in a::x = fs in
                                ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b -> 'c
